aml/main/static/main/style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

/* PREFLIGHT, Remove every default style */

blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  margin: 0;
}

ol,
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: inherit;
  font-weight: inherit;
}

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
}

* {
  font-family: "Lato", sans-serif;
}

*,
::before,
::after {
  border-width: 0;
  border-style: solid;
  border-color: black;
  text-decoration: none;
}

/* END PREFLIGHT */

body {
  margin: 0;
  width: 100vw;
  overflow-x: hidden;
}

/* START Navbar */

@media screen and (max-width: 720px) {
  .navbar+* {
    margin-top: 2.5rem;
  }
}

@media screen and (max-width: 450px) {
  .navbar+* {
    margin-top: 6rem;
  }
}

.navbar {
  padding: 0 5rem;
  padding-top: 1.5rem;
  height: 5rem;
}

/* Weird utilisation of margin-tops to only add a margin to wrapped elements
https://stackoverflow.com/questions/30887071/margin-top-only-when-the-flex-item-is-wrapped
  */

.navbar__items {
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 1rem;
  margin-top: -2.5rem;
}

.navbar__items__item {
  color: rgba(0, 0, 0, 0.8);
  text-decoration: none;
  padding: 0 1rem;
  cursor: pointer;
  margin-top: 2.5rem
}

.navbar__items__item--active {
  position: relative;
  font-weight: bold;
}

.navbar__items__item--active::after {
  position: absolute;
  left: 0;
  bottom: 0;
  content: "";
  background-color: black;
  width: 100%;
  height: 2px;
  transform: translateY(calc(100% + 1rem));
}

.navbar__items__right {
  margin-left: auto;
}

.navbar__divider {
  background-color: #e2e2e3;
  width: 100%;
  height: 2px;
}

/* END Navbar */

.popup {
  --spacing: 1rem;
  position: absolute;
  top: 4rem;
  left: 50%;

  background-color: white;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);

  padding: 0rem 1rem;
  padding-top: var(--spacing);
  width: 28rem;
  opacity: 0;
  transform: translate(-50%, -20rem);
  display: flex;
  flex-direction: column;

  transition: all ease 0.5s;
  max-height: 30rem;
  z-index: 10;
  border-radius: 1rem;
  overflow-y: auto;
}

.popup__archive-all__button {
  cursor: pointer;
  background-color: rgb(223, 45, 45);
  color: white;
  padding: 0.2rem 0.5rem;
  border-radius: 0.2rem;
  margin-bottom: var(--spacing);
}

.popup--show {
  opacity: 100;
  transform: translateX(-50%);
}

.popup__card {
  margin-bottom: var(--spacing);
  display: grid;
  grid-template-columns: 2fr 10fr 1fr;
  align-items: center;
}

.popup__card__image {
  width: 4rem;
  height: 4rem;
  object-fit: cover;
}

.popup__card__text {
  margin-left: 0.5rem;
}

.popup__card__close {
  place-self: center;
  cursor: pointer;
  color: black;
  background-color: transparent;
}

